--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,5 @@
 # MongoDB Connection
-MONGO_URI=mongodb://localhost:27017/finTrackDB
+MONGO_URI=mongodb://localhost:27017/expTrackerDB
 
 # Server Configuration
 PORT=5000
